--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,32 @@ section {
   transition: all 0.3s ease;
 }
 
+.outline-button {
+  border: 2px solid var(--bs-primary);
+  color: var(--bs-primary);
+  background-color: transparent;
+  transition: all 0.3s ease;
+}
+
+.colored-button {
+  background-color: var(--bs-primary);
+  color: white;
+  transition: all 0.3s ease;
+  border: 1px solid var(--bs-primary);
+}
+
+.colored-logo {
+  color: var(--bs-primary);
+}
+
+.colored-text {
+  color: var(--bs-primary);
+}
+
+[data-bs-theme="dark"] {
+  --bs-primary: #1ac22d;
+}
+
 .project-card:hover {
   transform: translateY(-5px);
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
