--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,9 @@ section {
   --bs-success: #059669;
   --bs-success-rgb: 5, 150, 105;
   --bs-darkmode-button-hover: #087a16;
+  --text-primary: #ffffff;
+  --bs-hover-button: #1849b3;
+  --bs-card-border: rgba(37, 99, 235, 0.7);
 }
 
 /* Dark Mode Styles */
@@ -27,6 +30,9 @@ section {
   --bs-body-bg: #121212;
   --bs-body-color: #e9ecef;
   --bs-secondary-color: #adb5bd;
+  --bs-primary: #1ac22d;
+  --text-primary: #000000;
+  --bs-card-border: rgba(26, 194, 45, 0.7);
 }
 
 /* Navbar */
@@ -94,26 +100,32 @@ section {
 /* Project Cards */
 .project-card {
   transition: all 0.3s ease;
+  border: 1px solid var(--bs-card-border);
+  border-radius: 0.5rem;
 }
 
 .outline-button {
-  border: 2px solid var(--bs-primary);
+  border: 1px solid var(--bs-primary);
   color: var(--bs-primary);
   background-color: transparent;
   transition: all 0.3s ease;
 }
 
 .outline-button:hover {
-  background-color: var(--bs-primary);
+  background-color: var(--bs-hover-button);
   color: white;
-  border: 2px solid var(--bs-primary);
+  border: 1px solid var(--bs-hover-button);
 }
 
 .colored-button {
   background-color: var(--bs-primary);
-  color: white;
+  color: var(--text-primary);
   transition: all 0.3s ease;
   border: 1px solid var(--bs-primary);
+}
+
+.colored-button:hover {
+  background-color: var(--bs-hover-button);
 }
 
 .colored-logo {
@@ -124,10 +136,6 @@ section {
   color: var(--bs-primary);
 }
 
-[data-bs-theme="dark"] {
-  --bs-primary: #1ac22d;
-}
-
 [data-bs-theme="dark"] .colored-button:hover {
   background-color: var(--bs-darkmode-button-hover);
   border: 1px solid var(--bs-darkmode-button-hover);
@@ -136,7 +144,7 @@ section {
 [data-bs-theme="dark"] .outline-button:hover {
   background-color: var(--bs-darkmode-button-hover);
   color: white;
-  border: 2px solid var(--bs-darkmode-button-hover);
+  border: 1px solid var(--bs-darkmode-button-hover);
 }
 
 [data-bs-theme="dark"] .colored-logo:hover {
@@ -147,6 +155,28 @@ section {
   transform: translateY(-5px);
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
     0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
+.badge {
+  background-color: var(--bs-primary);
+}
+
+[data-bs-theme="dark"] .badge {
+  background-color: #1ac22d !important;
+  color: black;
+}
+
+.card-title {
+  font-weight: 600;
+  font-size: 24px;
+}
+
+.card-subtitle {
+  text-decoration: overline;
+}
+
+.card-text {
+  margin-top: 10px;
 }
 
 /* Timeline */
