Squashed commit of the following:
commit 0f0856e08bee98acd5741dc9064a6cc01d0f3917
Author: HIPgirl95 <162224454+HIPgirl95@users.noreply.github.com>
Date:   Sun Jun 1 16:23:04 2025 -0400

    update README

commit ce23ed9d13a1f8369f55762e3a2aa267f707c904
Author: HIPgirl95 <162224454+HIPgirl95@users.noreply.github.com>
Date:   Sun Jun 1 15:53:15 2025 -0400

    Adding case study and tweaking pictures

commit 9fb3a4bcafd7d62fc27cb251d5c82c1b293e5a8a
Author: HIPgirl95 <162224454+HIPgirl95@users.noreply.github.com>
Date:   Sun Jun 1 14:37:21 2025 -0400

    Create Mobile Case Study Modal

--- a/src/App.css
+++ b/src/App.css
@@ -179,9 +179,10 @@ section {
   margin-top: 10px;
 }
 
-.first-casestudy-picture {
+.casestudy-picture {
   width: 100%;
   height: auto;
+  margin: 5px;
   border: 1px solid var(--bs-primary);
   border-radius: 0.5rem;
   box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
